# networking-in-c

./: .clang-format  CMakeLists.txt
include/: net.h
include/network/: network.h
src/: CMakeLists.txt  net.c
src/internal/: network_internal.h
src/network/: _bind_socket.c  _close_socket.c  _read_buffer_udp.c  _stop_udp_server.c
tests/: CMakeLists.txt  test_open_socket.c  test_udp_server_client.c
